# AteltaWeb

./: .gitignore  README.md  package-lock.json  package.json
api/: app.py  pyproject.toml  requirements.txt
public/: index.html
src/: App.css  App.js  custom-theme.less  index.css  index.js
src/Components/Demo/: Demo.js
src/Components/Demo/CountDown/: CountDown.js
src/Components/Navbar/: Navbar.css  Navbar.js
src/Components/VideoPlayer/: VideoPlayer.js
src/Components/WebCam/: WebCam.js
src/assets/: index.js
src/components/: index.js
src/components/featured/: featured.components.jsx  featured.styles.css
src/components/featured/featureModel2/: featuredModel2.featured.jsx
src/components/featured/featureModel3/: feature3.featured.jsx
src/components/hero/: hero.components.jsx  hero.styles.css
src/components/navbar/: navbar.components.js  navbar.components.jsx  navbar.styles.css
src/components/sidebar/: sidebar.components.jsx  sidebar.styles.css
src/components/video_player/: video_player.components.js  video_player.styles.css
src/components/webcam/: webcam.components.js  webcam.styles.css
src/routes/: index.js
src/routes/dashboard/: dashboard.routes.js
src/routes/demo/: demo.routes.js  demo.routes.jsx  demo.styles.css
src/routes/demo/countdown/: count_down.components.js  countdown.styles.css
src/routes/developers/: developers.routes.jsx
src/routes/home/: home.routes.js
src/routes/template/: template.page.jsx
