[tool.poetry]
name = "ateltaapi"
version = "0.1.0"
description = "API process requests from a web app"
authors = ["John T"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
